# Artour

./: README.md
artour/: CMakeLists.txt
artour/src/: artour.cpp  artour.h
artour/src/android/: target.cpp  target.h
artour/src/art/: art_method.cpp  art_method.h  art_method_offsets.h  art_runtime.cpp  art_runtime.h  compiler_options.cpp  compiler_options.h  modifiers.h  symbols.cpp  symbols.h
artour/src/art/shim/: art_jit.h
artour/src/utils/: dlfcn_custom.cpp  dlfcn_custom.h  logging.h  macros.h  memory.cpp  memory.h
demo/: settings.gradle
demo/app/: build.gradle
demo/app/src/main/: AndroidManifest.xml
demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo/app/src/main/java/com/aeonlucid/artourdemo/: MainActivity.java
demo/app/src/main/res/layout/: activity_main.xml
demo/app/src/main/res/values/: strings.xml
demo/gradle/wrapper/: gradle-wrapper.properties
